# VoiceLaTeX

./: .gitignore  LICENSE  README.md  cli.py  config.yaml  main.py  pyproject.toml  recognizer.py  requirements.txt  whisper_online.py
